--- a/index.html
+++ b/index.html
@@ -8,53 +8,45 @@
 
 </head>
 
-<body class=bingobng>
+<body>
     <div class=importanttext>
-        <h5>scroll down mate</h5>
-        <h1>YOU'RE about to See WHY</h1>
+        <h1 >YOU'RE about to See WHY</h1>
         <h2><em>They CALL ME</em></h2>
-        <h3>Mr. Skeleton.</h3>
+        <h3>
+          <span class="skulltime">
+            <span class="skullemoji1"><img class="fatskellyhead1" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skullemoji.png?raw=true"></span>
+            <span class="skullemoji2"><img class="fatskellyhead2" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skullemoji.png?raw=true"></span>
+            <span class="magic">Mr. Skeleton.</span>
+          </span>
+          </h3>
       </div>
-      
+
+  <div>
+    <p class="textgeneral">some selfies of mine thanks</p>
+    <div class=skellypictures>
       <div class=Skeleton-Media>
-        <img onmouseover="ClickeryHappening()" id="skellypicture1" class=skellypic 
+        <img  id="skellypicture1" class=skellypic 
         src="https://github.com/chrisg589/SwagNiggaExclusive/raw/main/66453420-806e-4136-a473-4f1a4f63425d.webp" 
-        alt="skeleton looking cool and awesome" width="320" height="500">
-        <img onmouseover="ClickeryHappening2()" id="skellypicture2" class=skellypic 
-        src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/images.jpg?raw=true" 
-        alt="skeleton lookiong insale yswag" width="320" height="500">
-        <img onmouseover="ClickeryHappening3()" id="skellypicture3" class=skellypic 
-        src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skeleton.gif?raw=true" 
-        alt="if there is no gif here youre a faggot sorry" width="320" height="500">
+        alt="skeleton looking cool and awesome" >
       </div>
-<div class=buttones>
-      <button class=die>THINSPO BUTTON (IRREVERSIBLE)</button>
-      <button class=fatty>FAT RETARD BUTTON</button>
+      <div class=Skeleton-Media>
+      <img  id="skellypicture2" class=skellypic 
+        src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/images.jpg?raw=true" 
+        alt="skeleton lookiong insale yswag" >
+      </div>
+      <div class=Skeleton-Media>
+        <img  id="skellypicture3" class=skellypic 
+        src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skeleton.gif?raw=true" 
+        alt="if there is no gif here youre a faggot sorry" >
+      </div>
     </div>
-      <div class=fishtime>
+  </div>
+  <div class=fishtime>
         <h1>But first... A little trip through the Aquarium...!!!</h1>
         <img class=fishie src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish.png?raw=true" 
         alt="hannah fish">
         <h2>ahhhh what a graceful creatuere. Moving onto more BONY EXCITEMENT!!!!</h2>  
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
 
 <script src="killyourself.js"></script>
 </body>
