--- a/index.html
+++ b/index.html
@@ -16,37 +16,54 @@
           <span class="skulltime">
             <span class="skullemoji1"><img class="fatskellyhead1" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skullemoji.png?raw=true"></span>
             <span class="skullemoji2"><img class="fatskellyhead2" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skullemoji.png?raw=true"></span>
-            <span class="magic">Mr. Skeleton.</span>
+            <a href="https://www.youtube.com/watch?v=L6Z2hkd4uhQ" target="_blank" rel="norefferer noopener"><span class="magic">Mr. Skeleton.</span></a>
           </span>
           </h3>
       </div>
 
-  <div>
+  <div id="skeletons here">
     <p class="textgeneral">some selfies of mine thanks</p>
     <div class=skellypictures>
       <div class=Skeleton-Media>
-        <img  id="skellypicture1" class=skellypic 
+        <a href="https://boards.4channel.org/a/catalog" target="_blank" rel="noreferrer noopener"><img  id="skellypicture1" class=skellypic 
         src="https://github.com/chrisg589/SwagNiggaExclusive/raw/main/66453420-806e-4136-a473-4f1a4f63425d.webp" 
-        alt="skeleton looking cool and awesome" >
+        alt="skeleton looking cool and awesome" ></a>
       </div>
       <div class=Skeleton-Media>
-      <img  id="skellypicture2" class=skellypic 
+        <a href="https://boards.4channel.org/fit/catalog" target="_blank" rel="noreferrer noopener"><img  id="skellypicture2" class=skellypic 
         src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/images.jpg?raw=true" 
-        alt="skeleton lookiong insale yswag" >
+        alt="skeleton lookiong insale yswag" ></a>
       </div>
       <div class=Skeleton-Media>
-        <img  id="skellypicture3" class=skellypic 
+        <a href="https://boards.4channel.org/pol/catalog" target="_blank" rel="noreferrer noopener"><img  id="skellypicture3" class=skellypic 
         src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/skeleton.gif?raw=true" 
-        alt="if there is no gif here youre a faggot sorry" >
+        alt="if there is no gif here youre a faggot sorry" ></a>
       </div>
     </div>
   </div>
+
+
+
+
   <div class=fishtime>
+
         <h1>But first... A little trip through the Aquarium...!!!</h1>
-        <img class=fishie src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish.png?raw=true" 
-        alt="hannah fish">
+
+        <div class="aquarium">
+          <div class="fishimages">
+            <a href="https://www.twitch.tv/jupiterman5/about" target="_blank" rel="norefferer noopener"><img class ="fish1" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish3.png?raw=true"></a>
+            <a href="https://twitter.com/" target="_blank" rel="norefferer noopener"><img class ="fish2" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish2.png?raw=true"></a>
+            <a href="https://old.reddit.com/r/LivestreamFail/" target="_blank" rel="norefferer noopener"><img class ="fish3" src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish1.png?raw=true"></a>
+            <img class=fishie src="https://github.com/chrisg589/SwagNiggaExclusive/blob/main/fish.png?raw=true">
+            </div>
+        </div>
+     
         <h2>ahhhh what a graceful creatuere. Moving onto more BONY EXCITEMENT!!!!</h2>  
+
   </div>
+
+
+
 
 <script src="killyourself.js"></script>
 </body>
